# mlops-zoomcamp

./: .gitignore  README.md  pyproject.toml  requirements.txt
01-intro/: duration-prediction.ipynb  homework01.ipynb
02-experiment-tracking/: duration-prediction.ipynb  homework02.ipynb  hpo.py  register_model.py  train.py
02-experiment-tracking/mlruns/0/: meta.yaml
02-experiment-tracking/running-mlflow-examples/: scenario-1.ipynb  scenario-2.ipynb
02-experiment-tracking/running-mlflow-examples/mlruns/424442853942758431/: meta.yaml
03-orchestration/: .dockerignore  .gitignore  README.md  deployment.yaml  docker-compose.yml  docker-services.sh  homework03.ipynb  mlflow-docker.sh  mlops-workflow.sh  model_utils.py  prefect.dockerfile  requirements.txt  taxi_prediction_flow.py
03-orchestration/03-orchestration/mlruns/0/: meta.yaml
03-orchestration/config/: .dockerignore  README.md  docker-compose.yml  mlflow.dockerfile
03-orchestration/models/: preprocessor.b
03-orchestration/scripts/: README.md  mlflow_monitor.py  visualize_metrics.py
03-orchestration/src/: model_utils.py
homeworks/: homework1.ipynb  homework2.ipynb
homeworks/mlruns/0/: meta.yaml
homeworks/mlruns/0/600acef98e314cb592f41fbb50bafc7a/: meta.yaml
homeworks/mlruns/0/7f012607c6e9422fa84ef6a4e845f1e5/: meta.yaml
homeworks/mlruns/0/ae4a936051374d739369d6fa04e36f3f/: meta.yaml
homeworks/mlruns/0/db44e9088ed7495eb1e3381e73819099/: meta.yaml
homeworks/mlruns/968493732326519495/: meta.yaml
homeworks/scripts/: train.py
mlruns/0/: meta.yaml
(+46 files in other folders)
