[project]
name = "mlops-zoomcamp-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.23",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "mlflow>=1.27.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]
